--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
 :root {
     --borders: hsla(283, 28%, 50%, .5);
-    --noteBg: hsla(27, 90%, 50%, 1);
+    --noteBg: #f2740c;
     --beatBg: hsla(283, 28%, 50%, .5);
     --ctrlBg: #66a;
-
-    background: hsl(295, 71%, 22%);
+    --pageBg: hsl(295, 71%, 22%);
     color: white;
+}
+
+body {
+    background: var(--pageBg);
+    width: 100%;
+    height: 100%;
 }
 
 main {
@@ -16,55 +21,13 @@ main {
     overflow: auto;
 }
 
-section.bar {
-    flex: 0 0 auto;
-    border: 2px double var(--borders);
-    display: inline-block;
-}
-
-section.bar:hover {
-    background: var(--barBg);
-}
-
-div {
-    border: 1px dashed var(--borders);
-    display: inline-block;
-}
-
-.octave {
-    border: 1px solid var(--borders);
-    display: block;
-}
-
-span {
-    margin: 1pt;
-    border: 1px dotted var(--borders);
-    display: block;
-    width: 2vw;
-    height: 2vh;
-    overflow: hidden;
-    font-size: 8pt;
-}
-
-.note:hover {
-    background: var(--borders);
-}
-
-.note.play {
-    background: var(--noteBg);
-    border-radius: 30%;
-}
-
-.currentBeat {
-    background: var(--beatBg);
-}
-
 .play-ctrl {
     border: 3px double;
     border-radius: 50%;
     width: 4em;
     height: 4em;
     position: fixed;
+    bottom: 0;
     color: white;
     margin: 2em;
     cursor:pointer;
@@ -78,4 +41,10 @@ span {
 .paused {
     background: green;
     border-color: green;
+}
+
+canvas {
+    position: absolute;
+    top: 0; 
+    left: 0;
 }
