--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
     background: var(--pageBg);
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 main {
@@ -22,12 +23,12 @@ main {
 }
 
 .play-ctrl {
+    position: absolute;
+    bottom: 0;
     border: 3px double;
     border-radius: 50%;
     width: 4em;
     height: 4em;
-    position: fixed;
-    bottom: 0;
     color: white;
     margin: 2em;
     cursor:pointer;
