--- a/src/index.css
+++ b/src/index.css
@@ -7,31 +7,56 @@
     color: white;
 }
 
-body {
-    background: var(--pageBg);
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+*:focus {
+    outline: none;
 }
 
-main {
-    -webkit-overflow-scrolling: touch;
-    /* border: 3px solid var(--borders); */
-    display: flex;
-    flex-wrap: nowrap;
+body {
+    background: var(--pageBg);
     overflow: auto;
 }
 
-.play-ctrl {
+#scroll-wrapper {
+    -webkit-overflow-scrolling: touch;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-y: auto;
+    height: 300px;
+}
+
+#scroll-wrapper > canvas {
+    position: absolute;
+    z-index: 1;
+    top: 0; 
+    left: 0;
+}
+
+#ctrls {
     position: absolute;
     bottom: 0;
+    font-size: 24pt;
+}
+
+#ctrls span {
+    position: relative;
+    float: left;
     border: 3px double;
     border-radius: 50%;
-    width: 4em;
-    height: 4em;
+    width: 1em;
+    height: 1em;
+    line-height: 1em;
+    padding: 0.2em;
+    text-align: center;
     color: white;
-    margin: 2em;
+    margin-left: 1em;
+    margin-bottom: 0.5em;
     cursor:pointer;
+}
+
+#play-ctrl {
+}
+#save-ctrl {
+    background: navy;
 }
 
 .playing {
@@ -42,10 +67,4 @@ main {
 .paused {
     background: green;
     border-color: green;
-}
-
-canvas {
-    position: absolute;
-    top: 0; 
-    left: 0;
 }
