--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     overflow: auto;
 }
 
-h1 {
+h1, h2 {
     font-family: 'Sunshiney', cursive;
     opacity: 0.5;
     text-align: center;
@@ -41,7 +41,6 @@ h1 {
     pointer-events: none;
 }
 
-
 #ctrls {
     position: absolute;
     bottom: 0;
@@ -65,6 +64,16 @@ h1 {
     line-height: 1em;
     cursor:pointer;
 }
+
+#tempo-ctrl {
+    width: auto;
+    font-size: 12pt;
+    white-space: nowrap;
+}
+#tempo-ctrl > * {
+    vertical-align: middle;
+}
+
 /* 
 #play-ctrl { }
 #save-ctrl { }
@@ -72,9 +81,3 @@ h1 {
 .paused { } 
 */
 
-fieldset {
-    font-size: 10pt;
-    width: auto;
-    display: inline-block;
-    text-align: center;
-}
