--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@ h1, h2 {
     -webkit-overflow-scrolling: touch;
     display: flex;
     flex-wrap: nowrap;
-    overflow-y: auto;
+    /* overflow-y: auto; */
+    overflow: auto;
     position: relative;
 }
 
@@ -48,6 +49,7 @@ h1, h2 {
     position: absolute;
     bottom: 0;
     font-size: 24pt;
+    z-index: 100;
 }
 
 #ctrls span,
