--- a/src/index.ejs
+++ b/src/index.ejs
@@ -56,6 +56,12 @@
                         </select>
                     </fieldset>
 
+                    <fieldset>
+                        <label>Musical scale</label>
+                        <select id='scale-ctrl'>
+                        </select>
+                    </fieldset>
+
                 </div>
 
                 <footer>
