--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,8 @@ h1, h2 {
     position: absolute;
     z-index: 1;
     top: 0; 
-    left: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 #tick,
@@ -50,6 +51,8 @@ h1, h2 {
     bottom: 0;
     font-size: 24pt;
     z-index: 100;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 #ctrls span,
