--- a/src/index.ejs
+++ b/src/index.ejs
@@ -23,6 +23,7 @@
         <span id='tempo-ctrl'>
             fast<input alt='Tempo' type='range' id='tempo-ms' min=10 max=1000 step=25 value=${this.tempoMs}>slow
         </span>
+        <label>Short notes:<input type='checkbox' id='stop-notes'/></label>
     </footer>
 
     <aside id="modal-settings" aria-hidden="true" class='modal'>
