--- a/src/index.ejs
+++ b/src/index.ejs
@@ -21,9 +21,9 @@
         <span id='save-ctrl'>💾</span>
         <span id='modal-ctrl' data-micromodal-trigger='modal-settings'>⚙</span>
         <span id='tempo-ctrl'>
-            fast<input alt='Tempo' type='range' id='tempo-ms' min=100 max=1000 step=25 value=${this.tempoMs}>slow
+            fast <input alt='Tempo' type='range' id='tempo-ms' min=100 max=1000 step=25 value=${this.tempoMs}> slow
         </span>
-        <label>Short notes:<input type='checkbox' id='stop-notes'/></label>
+        <span>Short notes:<input type='checkbox' id='stop-notes'/></span>
     </footer>
 
     <aside id="modal-settings" aria-hidden="true" class='modal'>
