--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,9 +20,9 @@
         <span id='play-ctrl' class='paused'>❚❚</span>
         <span id='save-ctrl'>💾</span>
         <span id='modal-ctrl' data-micromodal-trigger='modal-settings'>⚙</span>
-        <span id='tempo-ctrl'>
+        <legend id='tempo-ctrl'>
             fast <input alt='Tempo' type='range' id='tempo-ms' min=100 max=1000 step=25 value=${this.tempoMs}> slow
-        </span>
+        </legend>
         <span>Short notes:<input type='checkbox' id='stop-notes'/></span>
     </footer>
 
