--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,9 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+        .loading {
+            display: none;
+        }
+    </style>
 </head>
 
-<body>
+<body class='loading'>
     <header>
         <h1>Jakab's Tiny Sequencer</h1>
     </header>
